# agents-inc

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  OVERVIEW.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.madir/: control.db
catalog/: core-group-seeds.yaml  project-registry.yaml
catalog/groups/: atomistic-hpc-simulation.yaml  data-curation.yaml  design-communication.yaml  designer.yaml  developer.yaml  integration-delivery.yaml  literature-intelligence.yaml  material-engineer.yaml  material-scientist.yaml  polymorphism-researcher.yaml  publication-packaging.yaml  quality-assurance.yaml
catalog/profiles/: experiment-driven.yaml  hpc-simulation-core.yaml  professional-services-core.yaml  publication-push.yaml  rapid-debug.yaml  reproduction-core.yaml
docs/: INTRODUCTION.md
docs/bootstrap/: START_IN_CODEX.md
schemas/: connection.schema.yaml  dispatch.schema.yaml  escalation.schema.yaml  group.schema.yaml  group_generation_output.schema.yaml  project.schema.yaml  tool_policy.schema.yaml
scripts/: _wrapper_template.py  dispatch_dry_run.py  fabric_lib.py  generate_docs.py  groups.py  init_session.py  install_codex_skills.py  list_sessions.py  long_run_test.py  migrate_v2.py  new_group_template.py  new_project_bundle.py  orchestrate.py  orchestrate_report.py  orchestrator_reply.py  project_groups.py  resume.py  skills.py  sync_project_overlays.py  validate_fabric.py
scripts/release/: bootstrap.sh
src/agents_inc/: __init__.py
src/agents_inc/cli/: __init__.py  _project_context.py  cleanup_projects.py  create_project.py  deactivate_project.py  delete_project.py  deprecated_aliases.py  dispatch_dry_run.py  escalation_prompt.py  eval.py  generate_docs.py  group_list.py  groups.py  init_session.py  install_skills.py  list_sessions.py  long_run_test.py  main.py  migrate_v2.py  new_group.py  new_project.py  orchestrate.py  orchestrate_report.py  orchestrator_reply.py  project_groups.py  resume.py  save_project.py  skills.py  sync_overlays.py  validate.py
src/agents_inc/core/: __init__.py  agent_session_runner.py  agent_threads.py  codex_app_client.py  codex_home.py  config_state.py  context_state.py  credential_store.py  escalation.py  eval_harness.py  evidence_cache.py  fabric_lib.py  group_generation_engine.py  group_wizard.py  head_meeting.py  layered_runtime.py  live_dashboard.py  long_run.py  material_candidates.py  migrate_v2.py  model_profiles.py  negotiation_monitor.py  orchestrator_campaign.py  orchestrator_chat.py  orchestrator_reply.py  orchestrator_state.py  persona_tools.py  progress_notes.py  response_policy.py  session_compaction.py  session_state.py  skill_harness.py  task_intake_qa.py  token_usage.py  transcript_capture.py
src/agents_inc/core/backends/: __init__.py  base.py  codex.py  mock.py  registry.py
src/agents_inc/core/orchestration/: __init__.py  cycle_engine.py  meeting.py  report.py  turn_router.py
src/agents_inc/core/util/: __init__.py  constants.py  dispatch.py  edges.py  errors.py  fs.py  text.py  time.py
src/agents_inc/docs/internal/: long-run-validation.md  session-compaction.md  session-intake.md  session-resume.md
src/agents_inc/resources/catalog/: project-registry.yaml
src/agents_inc/resources/catalog/groups/: atomistic-hpc-simulation.yaml  data-curation.yaml  design-communication.yaml  designer.yaml  developer.yaml  integration-delivery.yaml  literature-intelligence.yaml  material-engineer.yaml  publication-packaging.yaml  quality-assurance.yaml
src/agents_inc/resources/catalog/profiles/: delivery-core.yaml
src/agents_inc/resources/schemas/: dispatch.schema.yaml  group.schema.yaml  orchestrator_session.schema.yaml  project.schema.yaml
src/agents_inc/resources/templates/group/: AGENTS.template.md  handoffs.template.yaml  specialist-AGENTS.template.md
src/agents_inc/resources/templates/group/references/starters/: evidence-review.md  web-research.md
src/agents_inc/resources/templates/group/skills/specialist/: SKILL.template.md
src/agents_inc/resources/templates/router/research-router/: SKILL.template.md
templates/group/: AGENTS.template.md  handoffs.template.yaml
templates/group/references/: citation-policy.template.md
templates/group/references/starters/: domain-core.md  integration.md  repro-qa.md
templates/group/skills/head/: SKILL.template.md
templates/group/skills/specialist/: SKILL.template.md
templates/group/tools/: allowlist.template.yaml
templates/router/research-router/: SKILL.template.md
tests/: test_agent_session_runner.py  test_bootstrap_flow.py  test_cleanup_projects.py  test_cli_list_sessions.py  test_cli_main.py  test_cli_orchestrator_reply.py  test_cli_project_resolution.py  test_cli_v5.py  test_codex_app_client.py  test_codex_live_session.py  test_docs_guard.py  test_escalation.py  test_eval_harness.py  test_evidence_cache.py  test_fabric.py  test_fabric_root_context.py  test_groups_and_migration.py  test_head_meeting.py  test_init_bootstrap.py  test_layered_runtime.py  test_live_dashboard.py  test_long_run.py  test_negotiation_monitor.py  test_orchestrate.py  test_orchestrator_chat.py  test_orchestrator_reply.py  test_progress_notes.py  test_project_control.py  test_project_groups.py  test_session_state.py  test_skill_scope.py  test_skills_fabric_root.py  test_token_usage.py
tests/fixtures/: materials_data.py
