[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents-inc"
version = "2.0.0"
description = "Publication-ready multi-agent group fabric and router orchestration toolkit for Codex sessions"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "sacRedeeRhoRn"}
]
license = {text = "MIT"}
keywords = ["codex", "multi-agent", "orchestration", "skills", "research"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=24.0",
  "ruff>=0.6.0"
]

[project.urls]
Homepage = "https://github.com/sacRedeeRhoRn/agents-inc"
Repository = "https://github.com/sacRedeeRhoRn/agents-inc"
Issues = "https://github.com/sacRedeeRhoRn/agents-inc/issues"

[project.scripts]
agents-inc = "agents_inc.cli.main:main"
agents-inc-groups = "agents_inc.cli.groups:main"
agents-inc-migrate-v2 = "agents_inc.cli.migrate_v2:main"
agents-inc-new-group = "agents_inc.cli.deprecated_aliases:new_group_alias"
agents-inc-new-project = "agents_inc.cli.deprecated_aliases:new_project_alias"
agents-inc-install-skills = "agents_inc.cli.deprecated_aliases:install_skills_alias"
agents-inc-sync-overlays = "agents_inc.cli.deprecated_aliases:sync_overlays_alias"
agents-inc-validate = "agents_inc.cli.deprecated_aliases:validate_alias"
agents-inc-dispatch-dry-run = "agents_inc.cli.deprecated_aliases:dispatch_dry_run_alias"
agents-inc-init-session = "agents_inc.cli.deprecated_aliases:init_session_alias"
agents-inc-list-sessions = "agents_inc.cli.deprecated_aliases:list_sessions_alias"
agents-inc-generate-docs = "agents_inc.cli.deprecated_aliases:generate_docs_alias"
agents-inc-long-run-test = "agents_inc.cli.deprecated_aliases:long_run_test_alias"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agents_inc = [
  "resources/**/*",
  "docs/internal/*.md"
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
